--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_OPTIONS='--inspect' next start"
   },
   "dependencies": {
     "next": "10.1.3",
@@ -14,6 +14,9 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
+    "eslint": "^7.25.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "^4.2.4"
   }
 }
