--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "start": "NODE_OPTIONS='--inspect' next start"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.25.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-image": "^4.0.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
-    "eslint": "^7.25.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "^4.2.4"
   }
 }
